--- a/index.css
+++ b/index.css
@@ -2,12 +2,36 @@
   box-sizing: border-box;
 }
 
+/*
+Color Scheme
+black: #000000
+darkblue: #263248
+lightblue: #7e8aa2
+white: #FFFFFF
+orange: #ff9000
+*/
+
 body {
   font-family: 'Roboto', sans-serif;
+  background: linear-gradient(to right, #000000,  #263248, #7e8aa2);
+  margin: 0;
+  padding: 10px;
+
+}
+
+h1 {
+	font-family: 'Merienda One', cursive;
+	font-size: 45px;
+	color: #ff9000;
+	text-align: center;
+	text-shadow: 1px 1px 3px #000000, 0 0 2em #7e8aa2, 0 0 1em #7e8aa2, 0 0 0.2em #7e8aa2;
+
 }
 
 .js-result-container {
 	border: 1px solid black;
+  	background-color: #FFFFFF;
+  	color: #000000;
 }
 
 .js-minimize {
@@ -15,6 +39,78 @@ body {
 	overflow: hidden;
 }
 
-.js-hidden {
-	display: none;
+.js-search-form{
+	position: relative;
+	color: white;
+}
+
+h2 {
+	color: white;
+	text-align: center;
+}
+
+.button {
+	outline-style:none;
+	height: 45px;
+	min-width: 75px;
+	border-radius: 12px;
+	background-color:  #7e8aa2;
+ 	border: none;
+ 	border-radius: 15px;
+ 	box-shadow: 0 9px #263248;
+}
+
+.button:hover {
+	background-color:  #7e8aa2;
+}
+
+.button:active {
+	background-color:  #263248;
+  	box-shadow: 0 5px #000000;
+  	transform: translateY(4px);
+  	color: #7e8aa2;
+}
+
+/* Dropdown Content (Hidden by Default) */
+.dropdown-content {
+    display: none;
+    position: absolute;
+    background-color: #7e8aa2;
+    min-width: 160px;
+    box-shadow: 0px 8px 16px 0px rgba(0,0,0,0.2);
+    z-index: 1;
+}
+
+/* Links inside the dropdown */
+.dropdown-content div {
+    float: none;
+    color: black;
+    padding: 12px 16px;
+    text-decoration: none;
+    display: block;
+    text-align: left;
+}
+
+/* Change color of dropdown links on hover */
+.dropdown-content div:hover {background-color: #f1f1f1}
+
+/* Show the dropdown menu (use JS to add this class to the .dropdown-content container when the user clicks on the dropdown button) */
+.js-show {display:block;}
+
+.dropdown {
+    overflow: hidden;
+}
+
+.dropdown .dropbtn {
+    cursor: pointer;
+    font-size: 16px;    
+    border: none;
+    outline: none;
+    color: white;
+    padding: 14px 16px;
+    background-color: inherit;
+}
+
+.left_align {
+	float: left;
 }
