--- a/index.css
+++ b/index.css
@@ -13,30 +13,52 @@ orange: #ff9000
 
 body {
   font-family: 'Roboto', sans-serif;
-  background: linear-gradient(to right, #000000,  #263248, #7e8aa2);
-  margin: 0;
-  padding: 10px;
+  background-color: #263248;
+  margin:0 auto;
+  max-width: 800px;
 
 }
 
 h1 {
-	font-family: 'Merienda One', cursive;
+	margin: 0;
+	font-family: 'Oswald', sans-serif;
 	font-size: 45px;
 	color: #ff9000;
 	text-align: center;
 	text-shadow: 1px 1px 3px #000000, 0 0 2em #7e8aa2, 0 0 1em #7e8aa2, 0 0 0.2em #7e8aa2;
+  	padding: 20px 20px 20px 20px;
+}
 
+h3 {
+	margin: 0;
+	padding: 17px;
+	font-family: 'Oswald', sans-serif;
+	font-size: 30px;
+	height: 80px;
+	color: #ff9000;
+	color: black;
+	text-shadow: 1px 1px 3px #ffffff, 0 0 2em #7e8aa2, 0 0 1em #7e8aa2, 0 0 0.2em #7e8aa2;
 }
 
 .js-result-container {
+	max-width: 800px;
+	min-width: 200px;
+	width: 100%;
 	border: 1px solid black;
-  	background-color: #FFFFFF;
+	border-radius: 4px;
+  	background-color: #7e8aa2;
   	color: #000000;
+    transition: 1.2s ease all;
+}
+
+.js-result-container p {
+	padding-left: 20px;
 }
 
 .js-minimize {
-	height: 100px;
+	height: 80px;
 	overflow: hidden;
+    transition: 0.2s ease all;
 }
 
 .js-search-form{
@@ -44,30 +66,60 @@ h1 {
 	color: white;
 }
 
-h2 {
-	color: white;
-	text-align: center;
-}
-
 .button {
+	font: inherit;
 	outline-style:none;
 	height: 45px;
-	min-width: 75px;
-	border-radius: 12px;
+	min-width: 120px;
 	background-color:  #7e8aa2;
- 	border: none;
- 	border-radius: 15px;
- 	box-shadow: 0 9px #263248;
+    border: 1px solid #263248;
+    cursor: pointer;
+    color: black;
+	font-size: 24px;
+    transition: 0.2s ease all;
 }
 
+.js-results{
+	width:100%;
+}
+
+form {
+	width: 100%;
+	padding: 0;
+}
+input {
+	height: 45px;
+	min-width: 200px;
+	max-width: 560px;
+	width: 100%;
+	font-size: 20px;
+	color: black;
+	padding: 15px 15px 0px 15px;
+}
+input:focus ~ .floating-label,
+input:not(:focus):valid ~ .floating-label{
+	top: 6px;
+	bottom: 12px;
+	left: 20px;
+	font-size: 11px;
+	opacity: 1;
+	color: #263248;
+}
+
+.floating-label {
+  position: absolute;
+  pointer-events: none;
+  left: 10px;
+  top: 15px;
+  transition: 0.2s ease all;
+  color: #7e8aa2;
+}
 .button:hover {
-	background-color:  #7e8aa2;
+	background-color:  #ff9000;
 }
 
 .button:active {
 	background-color:  #263248;
-  	box-shadow: 0 5px #000000;
-  	transform: translateY(4px);
   	color: #7e8aa2;
 }
 
@@ -76,41 +128,48 @@ h2 {
     display: none;
     position: absolute;
     background-color: #7e8aa2;
-    min-width: 160px;
+    width: 120px;
     box-shadow: 0px 8px 16px 0px rgba(0,0,0,0.2);
     z-index: 1;
 }
+.dropdown-content button { text-align: left; }
+.dropdown { overflow: hidden; }
+.dropdown:hover .dropdown-content{ display:block; }
 
-/* Links inside the dropdown */
-.dropdown-content div {
-    float: none;
-    color: black;
-    padding: 12px 16px;
-    text-decoration: none;
-    display: block;
-    text-align: left;
-}
-
-/* Change color of dropdown links on hover */
-.dropdown-content div:hover {background-color: #f1f1f1}
-
-/* Show the dropdown menu (use JS to add this class to the .dropdown-content container when the user clicks on the dropdown button) */
 .js-show {display:block;}
 
-.dropdown {
-    overflow: hidden;
+.left_align { float: left; }
+
+/* Rules for sizing the icon. */
+.material-icons.md-18 { font-size: 18px; }
+.material-icons.md-24 { font-size: 24px; }
+.material-icons.md-36 { font-size: 36px; }
+.material-icons.md-48 { font-size: 48px; }
+.material-icons{
+	outline-style:none;
+	color: #263248;
+	text-shadow: 1px 1px 3px #ffffff, 0 0 2em #7e8aa2, 0 0 1em #7e8aa2, 0 0 0.2em #7e8aa2;
 }
 
-.dropdown .dropbtn {
-    cursor: pointer;
-    font-size: 16px;    
-    border: none;
-    outline: none;
-    color: white;
-    padding: 14px 16px;
-    background-color: inherit;
+.icon {
+	float: right;
+	margin: 15px;
 }
 
-.left_align {
-	float: left;
+.youtube-video {
+	float: right;
+	margin: 15px;
+	cursor: none;
+}
+
+iframe {
+	allow-same-origin: true;
+	margin: 0;
+	padding: 0;
+	border: none;
+	height: 150;
+
+	-moz-box-shadow: 4px 4px 14px #263248;
+	-webkit-box-shadow: 4px 4px 14px #263248;
+	box-shadow: 4px 4px 14px #263248;
 }
